--- a/index.html
+++ b/index.html
@@ -1,5 +1,29 @@
 
----
-layout: default
-title: It can only get better from here, right?
----
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>It can only get better from here, right? </title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Welcome! You're here early, stay tuned as more project become available for your critical pleasure! </h1>
+				<p>I'm working on making my project public and starting new ones. <em> Exciting! </em>  <a href="/about">Read more here </a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:Kaplan.Maia@gmail.com">email</a></li>
+        		<li><a href="https://github.com/MaiaKaplan">github.com/MaiaKaplan</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
