--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,16 @@ title: Why are you doing this, anyways?
 
 <!
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	**Research Interests**
+	<p> Broadly, I am interested in biological problems that benefit from computational tools. Based on my background, I tend towards genetics and evoltuion, and how sequencing data can be used to provide supplementary information (such as ancestral relatedness, conserved sequences that may so for functional reasons, sequencings to represent species diversity). <p>
+	
+	
+	**Want more?**
+	<p>See more thoughts and blog posts at my personal website [www.MaiaKaplan.com](MaiaKaplan.com) or check out my <a href="/CV">CV</a></p> 
+	
+	**Fun Facts**
+	<p>I like food. I also like sports. Together, they strike very delicate balance and I fear the day that one side crumbles. Bets on which will give first and how? </p>
+	-The world's supply of cardamom has be infected by a terrible fungus; I've gone into shock and can't bare to eat.
+	-Cross country skiing season begins, my excitment greater than my fitness, and my stance too wide. Before I know it my hamstrings are tight, tighter, and pulled as my legs grow further apart while I continue to plumet downhill. For months my steps are tiny and limited by the range of motion I can achieve by steps that originate at the knee. 
+	
 </div>-- /.blurb -->
