--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ title: Why are you doing this, anyways?
  	<p> I have an undergraduate degree in biology, sure, and recently a Masters in biology as well, <em>woop!</em> Though bioinformatics has been the focus of my research for most of those studies ranging from phylogenetic analyses, to whole genome sequencing, to comparative studies that use the variation between species to guide biological experiments. </p>
 </div><!-- /.blurb -->
 
-<!
+
 <div class="blurb">
 	**Research Interests**
 	<p> Broadly, I am interested in biological problems that benefit from computational tools. Based on my background, I tend towards genetics and evoltuion, and how sequencing data can be used to provide supplementary information (such as ancestral relatedness, conserved sequences that may so for functional reasons, sequencings to represent species diversity). <p>
@@ -21,4 +21,4 @@ title: Why are you doing this, anyways?
 	-The world's supply of cardamom has be infected by a terrible fungus; I've gone into shock and can't bare to eat.
 	-Cross country skiing season begins, my excitment greater than my fitness, and my stance too wide. Before I know it my hamstrings are tight, tighter, and pulled as my legs grow further apart while I continue to plumet downhill. For months my steps are tiny and limited by the range of motion I can achieve by steps that originate at the knee. 
 	
-</div>-- /.blurb -->
+</div>-- <!/.blurb -->
