--- a/about/index.html
+++ b/about/index.html
@@ -21,4 +21,4 @@ title: Why are you doing this, anyways?
 	-The world's supply of cardamom has be infected by a terrible fungus; I've gone into shock and can't bare to eat.
 	-Cross country skiing season begins, my excitment greater than my fitness, and my stance too wide. Before I know it my hamstrings are tight, tighter, and pulled as my legs grow further apart while I continue to plumet downhill. For months my steps are tiny and limited by the range of motion I can achieve by steps that originate at the knee. 
 	
-</div>-- <!/.blurb -->
+</div><!--/.blurb--->
