--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@ title: Why are you doing this, anyways?
 	
 	
 	<h2>Want more?</h1>
-	<p>See more thoughts and blog posts at my personal website <link href="http://www.MaiaKaplan.com" rel="self"/> or check out my <a href="/CV">CV</a></p> 
+	<p>See more thoughts and blog posts at my personal website <a href="http://www.MaiaKaplan.com">MaiaKaplan.com<a/> or check out my <a href="/CV">CV</a></p> 
 	
 	<h2>Fun Facts</h2>
 	<p>I like food. I also like sports. Together, they strike very delicate balance and I fear the day that one side crumbles. Bets on which will give first and how? </p>
