--- a/cv/cv.html
+++ b/cv/cv.html
@@ -4,5 +4,5 @@ title: Bienvenue
 ---
 	<div class="blurb">
 	<h2>Aren't you a Biologist?</h2>
- 	<p> <a  href="/assests/CV.pdf<a/> <em>Curriculum Vitae</em> </p>
+ 	<p> <a  href="/assests/MaiaKaplan_CV.pdf <a/> <em>Curriculum Vitae</em> </p>
 </div><!-- /.blurb -->
