--- a/cv/cv.html
+++ b/cv/cv.html
@@ -3,6 +3,6 @@ layout: default
 title: Bienvenue
 ---
 	<div class="blurb">
-	<h2>Aren't you a Biologist?</h2>
- 	<p> <a  href="/assests/MaiaKaplan_CV.pdf <a/> <em>Curriculum Vitae</em> </p>
+	<h2>CV</h2>
+ 	<p> test </p>
 </div><!-- /.blurb -->
