--- a/cv/index.html
+++ b/cv/index.html
@@ -4,5 +4,5 @@ title: Bienvenue
 ---
 	<div class="blurb">
 	<h2>CV</h2>
- 	<p> test </p>
+ 	<p> <a href="/assests/MaiaKaplan-en">CV</a> </p>
 </div><!-- /.blurb -->
