--- a/cv/index.html
+++ b/cv/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Bienvenue
 ---
 	<div class="blurb">
-	<h2>CV</h2>
- 	<p> <a href="/assests/MaiaKaplan-en">CV</a> </p>
+	<h2> A simplified CV </h2>
+		<p><a href="/assests/MaiaKaplan_CV.pdf">  <em> Curriculum Vitae </em> </a> </p>
+		<p> For more details about these projects, or any others that I've participated in, send me an email and I would be pleased to provide more information. </p>
 </div><!-- /.blurb -->
