--- a/cv/index.html
+++ b/cv/index.html
@@ -4,6 +4,6 @@ title: Bienvenue
 ---
 	<div class="blurb">
 	<h2> A simplified CV </h2>
-		<p><a href="/assests/MaiaKaplan_CV.pdf">  <em> Curriculum Vitae </em> </a> </p>
+		<p><a href="/assets/MaiaKaplan_CV.pdf">  <em> Curriculum Vitae </em> </a> </p>
 		<p> For more details about these projects, or any others that I've participated in, send me an email and I would be pleased to provide more information. </p>
 </div><!-- /.blurb -->
