gut old generic content

--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
                         <li class="dropdown"><a href="blog.html"> Science Blog <i class="fa fa-angle-down"></i></a>
                             <ul role="menu" class="sub-menu"> -->
 
-                                <li><a href="blogScience.html"> Science  </a></li>
                                 <li><a href="blogMisc.html"> Misc </a></li>
                                 <!--
 
@@ -143,8 +142,9 @@
         <div class="container">
             <div class="main-slider">
                 <div class="slide-text">
-                    <h1> Welcome! What do we have here? </h1>
-                    <p> My online notebook reflecting my interests and projects. Curious about evolution, eukaryotes, comparative genomics. 					Currently finishing a Master of Science at McGill, Montreal. </p>
+                    <h1> Welcome! What is here: </h1>
+                    <p> My online notebook reflecting my interests and projects. Curious about evolution, eukaryotes, comparative genomics. Presently working as bioinformatics software developer at Streamline Genomics. </p>
+                    
                     <!-- <a href="#" class="btn btn-common">  SIGN UP! </a> -->
                 </div>
                 <img src="images/home/slider/slide1/house.png" class="img-responsive slider-house" alt="slider image">
@@ -385,7 +385,7 @@
                 <div class="col-sm-12">
                 end of section MK doesn't need, clients -->
                     <div class="copyright-text text-center">
-                        <p>&copy; Maia Kaplan 2017. All Rights Reserved. Albeit Sharing Encouraged.</p>
+                        <p>&copy; Maia Kaplan 2021. All Rights Reserved. Albeit Sharing Encouraged.</p>
                         <p>This website is created by Maia but based on a wonderful design from <a target="_blank" href="http://www.themeum.com">Themeum</a></p>
                     </div>
                 </div>
