--- a/coming-soon.html
+++ b/coming-soon.html
@@ -32,8 +32,8 @@
                 <div class="col-sm-8 col-sm-offset-2">                    
                     <div class="text-center coming-content">
                         <h1>UNDER CONSTRUCTION</h1>
-                        <p> I have been working on finishing up my thesis and will jump on this website next. 
-                            Shoot me an email or follow on<br /> Twitter to get in touch.</p>                           
+                        <p> It can be daunting to build a personal website so I'll be adding here slowly. Suggestions welcome! 
+                           <br />  Shoot me an email or follow on Twitter to get in touch.</p>                           
                         <div class="social-link">
                             <span><a href="https://www.linkedin.com/in/maia-kaplan-003926b2/"><i class="fa fa-linkedin"></i></a></span>
                             <span><a href="https://twitter.com/CuriousMaia"><i class="fa fa-twitter"></i></a></span>
@@ -96,7 +96,7 @@
         <div class="row">
             <div class="col-sm-12">
                <div class="copyright-text text-center">
-                        <p>&copy; Maia Kaplan 2017. All Rights Reserved. Albeit Sharing Encouraged.</p>
+                        <p>&copy; Maia Kaplan 2021. All Rights Reserved. Albeit Sharing Encouraged.</p>
                         <p>This website is created by Maia but based on a wonderful design from <a target="_blank" href="http://www.themeum.com">Themeum</a></p>
                 </div>
             </div>
