Update CV to 2021

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             <div class="tour-button">
 	                            
 	                            
-                                <a href="/CV/MaiaKaplanCV_en.pdf" target="_blank" class="btn btn-common"> English</a>
+                                <a href="/CV/MaiaKaplanCV_en_2021.pdf" target="_blank" class="btn btn-common"> English</a>
                                 <a href="/CV/MaiaKaplanCV_fr.pdf" target="_blank" class="btn btn-common"> French</a>
                              </div>
                         </div>
