Update content, CV titles, add github link

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -31,11 +31,14 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">                    
                     <div class="text-center coming-content">
-                        <h1>UNDER CONSTRUCTION</h1>
-                        <p> It can be daunting to build a personal website so I'll be adding here slowly. Suggestions welcome! 
+                        <h1>Ongoing...</h1>
+                        <p> It can be daunting to build a personal website so I'll be adding here slowly. Suggestions are welcome!
+                        <p> Currently, I'm working on cleaning up some projects to put the up on my <a href="https://github.com/MaiaKaplan/">github</a> so that the side projects are more tangible. I also have been writing recipes, which I might as well share because they are delicious. I'm also thinking of adding an album of photos of my dog because she's the best dog and if there's a photo of her with a ball or a stick, you probably want to see it. 
+                           <br /> 
                            <br />  Shoot me an email or follow on Twitter to get in touch.</p>                           
                         <div class="social-link">
                             <span><a href="https://www.linkedin.com/in/maia-kaplan-003926b2/"><i class="fa fa-linkedin"></i></a></span>
+                            <span><a href="https://github.com/MaiaKaplan/"><i class="fa fa-github"></i></a></span>
                             <span><a href="https://twitter.com/CuriousMaia"><i class="fa fa-twitter"></i></a></span>
                             
                         </div>
