--- a/blogMisc.html
+++ b/blogMisc.html
@@ -31,11 +31,9 @@
                 <div class="col-sm-12 overflow">
                    <div class="social-icons pull-right">
                         <ul class="nav nav-pills">
-                            <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                            <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                            <li><a href=""><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href=""><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href=" https://twitter.com/CuriousMaia"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://github.com/MaiaKaplan/"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/maia-kaplan-003926b2/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div> 
                 </div>
@@ -57,14 +55,6 @@
                 <!--    
                 </div>
                 -->
-                <div class="search">
-                    <form role="form">
-                        <i class="fa fa-search"></i>
-                        <div class="field-toggle">
-                            <input type="text" class="search-form" autocomplete="off" placeholder="Search">
-                        </div>
-                    </form>
-                </div>
             </div>
         </div>
     </header>
@@ -160,7 +150,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="contact-info bottom">
-                        <h2>Contacts</h2>
+                        <h2>Contact Info</h2>
                         <address>
                         E-mail: <a href="mailto:kaplan.maia@gmail.com">kaplan.maia@gmail.com</a> <br> 
                         twitter: curiousMaia <br> 
@@ -168,28 +158,9 @@
 
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12">
-                    <div class="contact-form bottom">
-                        <h2>Send a message</h2>
-                        <form id="main-contact-form" name="contact-form" method="post" action="sendemail.php">
-                            <div class="form-group">
-                                <input type="text" name="name" class="form-control" required="required" placeholder="Name">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" name="email" class="form-control" required="required" placeholder="Email Id">
-                            </div>
-                            <div class="form-group">
-                                <textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Your text here"></textarea>
-                            </div>                        
-                            <div class="form-group">
-                                <input type="submit" name="submit" class="btn btn-submit" value="Submit">
-                            </div>
-                        </form>
-                    </div>
-                </div>
                 <div class="col-sm-12">
                     <div class="copyright-text text-center">
-                        <p>&copy; Yours Truly 2021. All Rights Reserved.</p>
+                        <p>&copy; Yours Truly 2022. All Rights Reserved.</p>
                         <p>Layout Design by <a target="_blank" href="http://www.themeum.com">Themeum</a></p>
                     </div>
                 </div>
