--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                             <ul role="menu" class="sub-menu"> -->
 
                                 <li><a href="blogMisc.html"> Misc </a></li>
+                                <li><a href="recipes.html"> Recipes </a></li>
                                 <!--
 
                                 <li><a href="blogone.html">2 Columns + Right Sidebar</a></li>
