--- a/portfoliothree.html
+++ b/portfoliothree.html
@@ -142,12 +142,12 @@
                         <div class="portfolio-wrapper">
                             <div class="portfolio-single">
                                 <div class="portfolio-thumb">
-                                    <img src="images/portfolio/17.jpg" class="img-responsive" alt="">
+                                    <img src="images/portfolio/Food/kale_chickpea.jpeg" class="img-responsive" alt="">
                                 </div>
                                 <div class="portfolio-view">
                                     <ul class="nav nav-pills">
                                         <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
-                                        <li><a href="images/portfolio/17.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
+                                        <li><a href="images/portfolio/Food/KaleChickpeaCurry.jpeg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
