--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
                                 <li><a href="blogMisc.html"> Misc </a></li>
                                 <li><a href="recipes.html"> Recipes </a></li>
+                                <li><a href="blogBooks.html"> Reading </a></li>
                                 <!--
 
                                 <li><a href="blogone.html">2 Columns + Right Sidebar</a></li>
