Add two github repos to main page

--- a/index.html
+++ b/index.html
@@ -222,6 +222,26 @@
             <div class="row">
 	            
                 <div class="single-features">
+                    <div class="col-sm-5 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
+                        <img src="images/home/snowy_bankSmall.jpeg" class="img-responsive" alt="">
+                    </div>
+                    <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
+                        <h2> Export-Transform-Load </h2>
+                        <P>A command line tool that aims to allow flexible importing, version control, and the option of archiving can be found <a href="https://github.com/seeqbio/cabin">at this github repo </a>. The rrepo is used to show the main features of the tool we used for importing public datasets at Streamline Genomics. </P>
+                    </div>
+                </div>
+
+                <div class="single-features">
+                    <div class="col-sm-6 col-sm-offset-1 align-right wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
+                        <h2> ClinGen Predicts Pathogenicity </h2>
+                        <P> Using the massive dataset containing extensive clinical variants and information about these variants (population frequencies, phenotype effect, etc), we toyed with predicted pathogenicity and compared to ClinGen's internal pathogenicity predictions. In a machine learning model, the labels were left out for training and used in a testing dataset to measure acuracy and precision. See these experiments <a href="https://github.com/MaiaKaplan/ClinBall">at this github repo</a>. </P>
+                    </div>
+                    <div class="col-sm-5 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
+                        <img src="images/home/treeSmall.jpeg" class="img-responsive" alt="">
+                    </div>
+                </div>
+                
+                <div class="single-features">
                     <div class="col-sm-5 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
                         <img src="images/home/Monsnowsunwb.jpg" class="img-responsive" alt="">
                     </div>
